# live_performer

./: .gitignore  .gitmodules  README.md  common_structs_proposal.md  pubspec.yaml
engine/: .gitignore  CMakeLists.txt
engine/cmake/pamplejuce/: JUCEDefaults.cmake  PamplejuceIPP.cmake  PamplejuceLog.cmake  PamplejuceMacOS.cmake  README.md  Sanitizers.cmake  SharedCodeDefaults.cmake  Tests.cmake
engine/include/mixer_engine/: common.h  generated_structs.h  mixer_engine_abi.h
engine/source/abi/: generated_structs.cpp  mixer_engine_abi.cpp  util.cpp  util.h
engine/source/engine/: audio_config.h  engine.cpp  engine.h  mixer_graph.h  mixer_graph_processor.h  oscillator_processor.h
engine/tests/: catch2_main.cpp  demo.cpp  engine_demo.cpp
hook/: build.dart
lib/: main.dart  mixer_engine.dart  mixer_engine.g.dart
lib/app/: app_state.dart  mixer_engine_lifecycle_widget.dart
lib/app/data/: app_state.dart
lib/app/data/blocs/: audio_overview.dart  audio_setup.dart  graph.dart  graph_effective.dart  graph_group.dart  preferences.dart
lib/app/data/blocs/audio_overview/: bloc.dart  state.dart
lib/app/data/blocs/audio_setup/: bloc.dart  state.dart
lib/app/data/blocs/graph/: bloc.dart  state.dart
lib/app/data/blocs/graph_effective/: bloc.dart  state.dart
lib/app/data/blocs/graph_group/: bloc.dart  state.dart
lib/app/data/blocs/graph_root/: bloc.dart  state.dart
lib/app/data/blocs/preferences/: bloc.dart  state.dart
lib/app/data/repositories/: audio_graph_repository.dart  audio_io_repository.dart  file_repository.dart
lib/app/ui/core/: dropdown.dart  infinite_canvas.dart
lib/app/ui/core/conditional_layout_builder/: conditional_layout_builder.dart
lib/app/ui/core/config_dialog/: config_dialog.dart
lib/app/ui/core/dropdown/: dropdown.dart  option.dart  optional_dropdown.dart
lib/app/ui/core/infinite_canvas/: canvas_node.dart  canvas_node_controller.dart  infinite_canvas.dart  infinite_canvas_node.dart
lib/app/ui/pages/main_page/: main_page.dart
lib/app/ui/pages/main_page/graph_canvas/: graph_canvas.dart  graph_canvas_view.dart  graph_node_content.dart
lib/app/ui/pages/main_page/settings_dialog/: audio_setup_view.dart  device_config.dart  settings_dialog.dart  single_device_config.dart
lib/app/ui/theme/: theme.dart
lib/app/util/: preferences_loader.dart
lib/mixer_engine/: converter_extensions.dart  mixer_engine.dart  mixer_engine.g.dart  mixer_engine_structs.g.dart
lib/util/: bloc_error_stream.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: ffi_test.dart  graph_test.dart
tool/: abi_codegen.dart  ffigen.dart
tool/src/abi_codegen/: input.dart  tool.dart  type_info.dart
tool/src/abi_codegen/generators/: abi_generator.dart  abi_generator_c_header.dart  abi_generator_cpp.dart  abi_generator_dart.dart  ffigen.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
